Suppress warnings for missing files when using fallback